--- a/BigSchool1/Content/Site.css
+++ b/BigSchool1/Content/Site.css
@@ -1,6 +1,6 @@
 ﻿.navbar-inverse {
-    background-color: #b200ff;
-    border-color: #ffffff;
+    background-color: #ff0000;
+    border-color: #b6ff00;
 }
     .navbar-inverse .navbar-nav > li > a {
         text-align: center;
