--- a/BigSchool1/Content/Site.css
+++ b/BigSchool1/Content/Site.css
@@ -28,7 +28,7 @@
 .course >li .date
 {
     text-align: center;
-    background-color:   #b200ff;
+    background-color:   #ff00dc;
     color:  #ffffff;
     width:  60px;
     border-radius:  8px;
