--- a/BigSchool1/Views/Home/Index.cshtml
+++ b/BigSchool1/Views/Home/Index.cshtml
@@ -67,6 +67,16 @@
                         alert("Something failed!");
                     });
             });
+            $(".js-toggle-follow").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/followings", { followeeId: button.attr("data-user-id") })
+                    .done(function () {
+                        button.text("Following");
+                    })
+                    .fail(function () {
+                        alert("Something failed");
+                    });
+            });
         });
     </script>
 }
